<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shape"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="25dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_shape"
        android:padding="10dp">

        <TextView
            android:id="@+id/eventNameOrder"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/event_name"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberOfTicketsOrder"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/number_of_tickets"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TicketCategoryOrder" />

        <TextView
            android:id="@+id/TicketCategoryOrder"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/ticket_category"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventNameOrder" />

        <Spinner
            android:id="@+id/ticketCategoriesOrderInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TicketCategoryOrder"
            app:layout_constraintTop_toBottomOf="@+id/totalPriceOrder" />

        <EditText
            android:id="@+id/numberOfTicketsOrderInput"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/numberOfTicketsOrder"
            app:layout_constraintTop_toBottomOf="@+id/ticketCategoriesOrderInput" />

        <Button
            android:id="@+id/orderDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/light_blue"
            android:text="@string/delete_order"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/updateOrderButton"
            app:layout_constraintTop_toBottomOf="@+id/numberOfTicketsOrderInput" />

        <Button
            android:id="@+id/updateOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/light_blue"
            android:text="@string/update_order"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOfTicketsOrderInput" />

        <TextView
            android:id="@+id/orderDateOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/ordered_at"
            android:textColor="#B0AAAA"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/eventNameOrder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalPriceOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/total_price"
            android:textColor="#B0AAAA"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/orderDateOrder"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>