<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/logInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="top"
        android:lineSpacingExtra="7sp"
        android:text="@string/log_in_title"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationY="-3.36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="4sp"
        android:text="@string/log_in_to_text"
        android:textColor="#8A8A8A"
        android:textSize="16sp"
        android:translationY="-1.92sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInTitle" />

    <EditText
        android:id="@+id/usernameLogIn"
        android:inputType="text"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="24dp"
        android:hint="@string/username_text"
        android:background="@drawable/search_bar_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInText" />

    <EditText
        android:id="@+id/passwordLogIn"
        android:inputType="textPassword"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password_text"
        android:background="@drawable/search_bar_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogIn" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/light_blue"
        android:text="@string/log_in_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>